--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <h1 class="gallery2">ретро экземпляры</h1>
     </div>
     <div class="gallery">
-        <img class="galleryImage" src="/img/1.webp" alt="автомобили" onclick="showImage(src)">
-        <img class="galleryImage" src="/img/2.webp" alt="автомобили"  onclick="showImage(src)">
-        <img class="galleryImage" src="/img/3.webp" alt="автомобили"  onclick="showImage(src)">
-        <img class="galleryImage" src="/img/4.webp" alt="автомобили"  onclick="showImage(src)">
-        <img class="galleryImage" src="/img/5.webp" alt="автомобили"  onclick="showImage(src)">
-        <img class="galleryImage" src="/img/6.webp" alt="автомобили"  onclick="showImage(src)">
-        <img class="galleryImage" src="/img/7.webp" alt="автомобили"  onclick="showImage(src)">
-        <img class="galleryImage" src="/img/8.webp" alt="автомобили"  onclick="showImage(src)">
-        <img class="galleryImage" src="/img/9.webp" alt="автомобили"  onclick="showImage(src)">
-        <img class="galleryImage" src="/img/10.jpg" alt="автомобили"  onclick="showImage(src)">
+        <img class="galleryImage" src="./img/1.webp" alt="автомобили" onclick="showImage(src)">
+        <img class="galleryImage" src="./img/2.webp" alt="автомобили"  onclick="showImage(src)">
+        <img class="galleryImage" src="./img/3.webp" alt="автомобили"  onclick="showImage(src)">
+        <img class="galleryImage" src="./img/4.webp" alt="автомобили"  onclick="showImage(src)">
+        <img class="galleryImage" src="./img/5.webp" alt="автомобили"  onclick="showImage(src)">
+        <img class="galleryImage" src="./img/6.webp" alt="автомобили"  onclick="showImage(src)">
+        <img class="galleryImage" src="./img/7.webp" alt="автомобили"  onclick="showImage(src)">
+        <img class="galleryImage" src="./img/8.webp" alt="автомобили"  onclick="showImage(src)">
+        <img class="galleryImage" src="./img/9.webp" alt="автомобили"  onclick="showImage(src)">
+        <img class="galleryImage" src="./img/10.jpg" alt="автомобили"  onclick="showImage(src)">
     </div>
     <div class="img-popup-conteiner" id="ImagePopup">
         <div class="popupImage-block">
